# cpp.template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
tests/: CMakeLists.txt  helloworld.cpp  test.h
